--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 *.pot
 *.mo
 core/plugin/*/po/ja/*.po
+*.AppImage
+deployment/appimage/.vagrant
+deployment/flatpak/build
+deployment/flatpak/.flatpak-builder
