override virtual functions of Gtk::Widget
update gtk3 gem to patched version

--- a/plugin/gtk3/Gemfile
+++ b/plugin/gtk3/Gemfile
@@ -1,3 +1,5 @@
 source 'https://rubygems.org'
 
-gem 'gtk3', '3.4.1'
+git 'https://github.com/yuntan/ruby-gnome', branch: 'hook-up-vfunc' do
+  gem 'gtk3'
+end
