--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: AppImage
 # events but only for the master branch
 on:
   push:
-    branches: [ yuntan ]
+    branches: [ yuntan, develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -14,7 +14,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-16.04
-    
+
     env:
       REPO: ${{github.workspace}}
       APPDIR: ${{github.workspace}}/AppDir
@@ -47,7 +47,7 @@ jobs:
           libgdk-pixbuf2.0-dev \
           libpango1.0-dev \
           libgtk-3-dev
-          
+
     - name: jemalloc
       run: |
         wget -q https://github.com/jemalloc/jemalloc/releases/download/$jemalloc_version/jemalloc-$jemalloc_version.tar.bz2
@@ -57,7 +57,7 @@ jobs:
         make -j2
         sudo make install
         make "DESTDIR=$APPDIR" install
-        
+
     - name: ruby
       run: |
         wget -q https://cache.ruby-lang.org/pub/ruby/2.6/ruby-$ruby_version.tar.gz
@@ -67,7 +67,7 @@ jobs:
         make -j2
         make "DESTDIR=$APPDIR" install
         cp -v BSDL COPYING* GPL LEGAL README* $APPDIR/usr/lib/ruby
-        
+
     - name: execso
       run: |
         # use exec.so to run commands placed outside of the AppImage
