--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,9 @@ jobs:
           libgirepository1.0-dev \
           libgdk-pixbuf2.0-dev \
           libpango1.0-dev \
-          libgtk-3-dev
+          libgtk-3-dev \
+          gnome-themes-standard \
+          gtk2-engines-murrine
 
     - name: jemalloc
       run: |
